--- a/index.html
+++ b/index.html
@@ -36,7 +36,36 @@
             <img src="./assets/images/icone_carrinho.svg" alt="Carrinho de Compras">
         </button>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <h2>Produtos</h2>
+            <ul>
+                <li>
+                   <figure>
+                    <img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro - Roxa">
+                    <figcaption>Camiseta Dev em Dobro - Roxa</figcaption>
+                   </figure> 
+                   <div>
+                    <span>Cor: roxa</span>
+                    <span>Tamanho: M</span>
+                    <span>R$ 89,00</span>
+                    <button>Adicionar ao Carrinho</button>
+                   </div>
+                </li>
+                <li>
+                   <figure>
+                    <img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro - Azul">
+                    <figcaption>Camiseta Dev em Dobro - Azul</figcaption>
+                   </figure> 
+                   <div>
+                    <span>Cor: roxa</span>
+                    <span>Tamanho: P</span>
+                    <span>R$ 100,00</span>
+                    <button>Adicionar ao Carrinho</button>
+                   </div>
+            </ul>
+        </section>
+    </main>
     <footer></footer>
 </body>
 
