--- a/index.html
+++ b/index.html
@@ -13,15 +13,27 @@
 
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/cabecalho.css">
+    <link rel="stylesheet" href="./css/produtos.css">
 </head>
 
 <body>
-    <header>
-        <a href="/">
-            <img src="./assets/images/logo.svg" alt="
-            Dev em Dobro">
-        </a>
-        <nav>
+    <header class="cabecalho">
+        <div class="header-conteudo">
+            <div class="header-esquerda">
+
+            <button class="menu-hamburguer">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+
+            <a class="logo" href="/">
+                <img src="./assets/images/logo.svg" alt="
+                Dev em Dobro">
+            </a>
+            </div>
+            <nav class="menu-principal">
             <ul>
                 <li>
                     <a href="#home">Home</a>
@@ -40,9 +52,11 @@
                 </li>
             </ul>
         </nav>
-        <button>
+        <button class="botao-carrinho">
             <img src="./assets/images/icone_carrinho.svg" alt="Carrinho de Compras">
+        <span id="contador-carrinho">0</span>
         </button>
+        </div>
     </header>
     <main>
         <section>
