--- a/index.html
+++ b/index.html
@@ -59,31 +59,31 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="produtos">
             <h2>Produtos</h2>
             <ul>
-                <li>
+                <li class="produto" data-id="camiseta-roxa">
                     <figure>
                         <img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro - Roxa">
-                        <figcaption>Camiseta Dev em Dobro - Roxa</figcaption>
+                        <figcaption class="nome">Camiseta Dev em Dobro</figcaption>
                     </figure>
-                    <div>
+                    <div class="informacoes">
                         <span>Cor: roxa</span>
                         <span>Tamanho: M</span>
-                        <span>R$ 89,00</span>
-                        <button>Adicionar ao Carrinho</button>
+                        <span class="preco">R$ 89,00</span>
+                        <button class="adicionar-ao-carrinho">Adicionar ao Carrinho</button>
                     </div>
                 </li>
-                <li>
+                <li class="produto">
                     <figure>
-                        <img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro - Azul">
-                        <figcaption>Camiseta Dev em Dobro - Azul</figcaption>
+                        <img src="./assets/images/caneca_devemdobro.jpg" alt="Caneca Dev em Dobro">
+                        <figcaption>Caneca Dev em Dobro</figcaption>
                     </figure>
-                    <div>
+                    <div class="informacoes">
                         <span>Cor: roxa</span>
                         <span>Tamanho: P</span>
-                        <span>R$ 100,00</span>
-                        <button>Adicionar ao Carrinho</button>
+                        <span class="preco">R$ 100,00</span>
+                        <button class="adicionar-ao-carrinho">Adicionar ao Carrinho</button>
                     </div>
             </ul>
         </section>
