--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/cabecalho.css">
     <link rel="stylesheet" href="./css/produtos.css">
+    <link rel="stylesheet" href="./css/rodape.css">
 </head>
 
 <body>
@@ -22,40 +24,40 @@
         <div class="header-conteudo">
             <div class="header-esquerda">
 
-            <button class="menu-hamburguer">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
+                <button class="menu-hamburguer">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
 
-            <a class="logo" href="/">
-                <img src="./assets/images/logo.svg" alt="
+                <a class="logo" href="/">
+                    <img src="./assets/images/logo.svg" alt="
                 Dev em Dobro">
-            </a>
+                </a>
             </div>
             <nav class="menu-principal">
-            <ul>
-                <li>
-                    <a href="#home">Home</a>
-                </li>
-                <li>
-                    <a href="#sobre">Sobre</a>
-                </li>
-                <li>
-                    <a href="#produtos">Produtos</a>
-                </li>
-                <li>
-                    <a href="#perguntas">Perguntas Frequentes</a>
-                </li>
-                <li>
-                    <a href="#contato">Fale Conosco</a>
-                </li>
-            </ul>
-        </nav>
-        <button class="botao-carrinho">
-            <img src="./assets/images/icone_carrinho.svg" alt="Carrinho de Compras">
-        <span id="contador-carrinho">0</span>
-        </button>
+                <ul>
+                    <li>
+                        <a href="#home">Home</a>
+                    </li>
+                    <li>
+                        <a href="#sobre">Sobre</a>
+                    </li>
+                    <li>
+                        <a href="#produtos">Produtos</a>
+                    </li>
+                    <li>
+                        <a href="#perguntas">Perguntas Frequentes</a>
+                    </li>
+                    <li>
+                        <a href="#contato">Fale Conosco</a>
+                    </li>
+                </ul>
+            </nav>
+            <button class="botao-carrinho">
+                <img src="./assets/images/icone_carrinho.svg" alt="Carrinho de Compras">
+                <span id="contador-carrinho">0</span>
+            </button>
         </div>
     </header>
     <main>
@@ -88,47 +90,48 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <nav>
-            <h3>Institucional</h3>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#produtos">Produtos</a></li>
-                <li><a href="#perguntas-frequentes">Perguntas Frequentes</a></li>
-                <li><a href="#fale-conosco">Fale Conosco</a></li>
-            </ul>
-        </nav>
-        <nav>
-            <h3>Ajuda</h3>
-            <ul>
-                <li><a href="#trocas">Trocas e Devoluções</a></li>
-                <li><a href="#termos">Termos e Condições</a></li>
-                <li><a href="#politica">Política de Privacidade</a></li>
-                <li><a href="#padrao">Padrão de Qualidade</a></li>
-            </ul>
-        </nav>
-        <nav>
-            <h3>Endereço</h3>
-            <ul>
-                <li><a href="#">Rua Vale do Silicio</a></li>
-                <li>São Francisco, Califórnia</li>
-                <li>Estados Unidos da América</li>
-                <li><a href="#">(34) 11234-5456789</a></li>
-                <li><a href="#">Vendas@ecommercedd.com</a></li>
-            </ul>
-        </nav>
-        <div>
+    <footer class="rodape">
+        <div class="container">
+            <nav>
+                <h3>Institucional</h3>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#produtos">Produtos</a></li>
+                    <li><a href="#perguntas-frequentes">Perguntas Frequentes</a></li>
+                    <li><a href="#fale-conosco">Fale Conosco</a></li>
+                </ul>
+            </nav>
+            <nav>
+                <h3>Ajuda</h3>
+                <ul>
+                    <li><a href="#trocas">Trocas e Devoluções</a></li>
+                    <li><a href="#termos">Termos e Condições</a></li>
+                    <li><a href="#politica">Política de Privacidade</a></li>
+                    <li><a href="#padrao">Padrão de Qualidade</a></li>
+                </ul>
+            </nav>
+            <nav>
+                <h3>Endereço</h3>
+                <ul>
+                    <li><a href="#">Rua Vale do Silicio</a></li>
+                    <li>São Francisco, Califórnia</li>
+                    <li>Estados Unidos da América</li>
+                    <li><a href="#">(34) 11234-5456789</a></li>
+                    <li><a href="#">Vendas@ecommercedd.com</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="copyright">
             <p>@2025 - Todos os direitos reservados</p>
         </div>
     </footer>
-    <!-- [1] -->
-    <div id="modal-1" class="modal" aria-hidden="true">
 
-        <!-- [2] -->
+    <!-- <div id="modal-1" class="modal" aria-hidden="true">
+
         <div tabindex="-1" data-micromodal-close>
 
-            <!-- [3] -->
+        
             <div role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
 
 
@@ -137,7 +140,7 @@
                         Carrinho de Compras
                     </h2>
 
-                    <!-- [4] -->
+                
                     <button aria-label="Close modal" data-micromodal-close></button>
                 </header>
 
@@ -182,8 +185,7 @@
 
             </div>
         </div>
-    </div>
-
+    </div> -->
 
     <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
 </body>
