--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="./css/cabecalho.css">
     <link rel="stylesheet" href="./css/produtos.css">
     <link rel="stylesheet" href="./css/rodape.css">
+    <link rel="stylesheet" href="./css/modal-carrinho.css">
+
 </head>
 
 <body>
@@ -76,7 +78,7 @@
                         <button class="adicionar-ao-carrinho">Adicionar ao Carrinho</button>
                     </div>
                 </li>
-                <li class="produto">
+                <li class="produto" data-id="caneca-devemdobro">
                     <figure>
                         <img src="./assets/images/caneca_devemdobro.jpg" alt="Caneca Dev em Dobro">
                         <figcaption>Caneca Dev em Dobro</figcaption>
@@ -87,6 +89,33 @@
                         <span class="preco">R$ 100,00</span>
                         <button class="adicionar-ao-carrinho">Adicionar ao Carrinho</button>
                     </div>
+                </li>
+                </li>
+                <li class="produto" data-id="caneca-devemdobro">
+                    <figure>
+                        <img src="./assets/images/caneca_devemdobro.jpg" alt="Caneca Dev em Dobro">
+                        <figcaption>Caneca Dev em Dobro</figcaption>
+                    </figure>
+                    <div class="informacoes">
+                        <span>Cor: roxa</span>
+                        <span>Tamanho: P</span>
+                        <span class="preco">R$ 100,00</span>
+                        <button class="adicionar-ao-carrinho">Adicionar ao Carrinho</button>
+                    </div>
+                </li>
+                </li>
+                <li class="produto" data-id="caneca-devemdobro">
+                    <figure>
+                        <img src="./assets/images/caneca_devemdobro.jpg" alt="Caneca Dev em Dobro">
+                        <figcaption>Caneca Dev em Dobro</figcaption>
+                    </figure>
+                    <div class="informacoes">
+                        <span>Cor: roxa</span>
+                        <span>Tamanho: P</span>
+                        <span class="preco">R$ 100,00</span>
+                        <button class="adicionar-ao-carrinho">Adicionar ao Carrinho</button>
+                    </div>
+                </li>
             </ul>
         </section>
     </main>
@@ -127,12 +156,12 @@
         </div>
     </footer>
 
-    <!-- <div id="modal-1" class="modal" aria-hidden="true">
+    <div id="modal-1" class="modal" aria-hidden="true">
 
         <div tabindex="-1" data-micromodal-close>
 
-        
-            <div role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+
+            <div class="container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
 
 
                 <header>
@@ -141,52 +170,51 @@
                     </h2>
 
                 
-                    <button aria-label="Close modal" data-micromodal-close></button>
+                    <button class="fechar" aria-label="Close modal" data-micromodal-close></button>
                 </header>
 
                 <div id="modal-1-content">
                     <table>
                         <thead>
                             <tr>
-                                <th>Produto</th>
+                                <th class="th-produto">Produto</th>
                                 <th>Descrição</th>
                                 <th>Preço</th>
                                 <th>Quantidade</th>
-                                <th>Total</th>
+                                <th class="th-total">Total</th>
                                 <th></th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td><img src="./assets/images/camiseta_roxa.jpg" alt="camiseta dev em dobro - roxa">
+                                <td class="td-produto"><img src="./assets/images/camiseta_roxa.jpg" alt="camiseta dev em dobro - roxa">
                                 </td>
-                                <td>Camiseta Dev em Dobro - Roxa</td>
-                                <td>R$ 89,00</td>
-                                <td><input type="number" value="1" min="1"></td>
-                                <td>R$ 89,00</td>
-                                <td><button id="deletar">Deletar</button></td>
+                                <td>Camiseta Dev em Dobro</td>
+                                <td class="td-preco-unitario">R$ 89,00</td>
+                                <td class="td-quantidade"><input type="number" value="1" min="1"></td>
+                                <td class="td-preco-total">R$ 89,00</td>
+                                <td><button class="btn-remover" id="deletar"></button></td>
                             </tr>
                             <tr>
-                                <td><img src="./assets/images/caneca_devemdobro.jpg" alt="caneca dev em dobro"></td>
+                                <td class="td-produto"><img src="./assets/images/caneca_devemdobro.jpg" alt="caneca dev em dobro"></td>
                                 <td>Caneca Dev em Dobro</td>
-                                <td>R$ 89,00</td>
-                                <td><input type="number" value="1" min="1"></td>
-                                <td>R$ 89,00</td>
-                                <td><button id="deletar">Deletar</button></td>
+                                <td class="td-preco-unitario">R$ 89,00</td>
+                                <td class="td-quantidade"><input type="number" value="1" min="1"></td>
+                                <td class="td-preco-total">R$ 89,00</td>
+                                <td><button class="btn-remover" id="deletar"></button></td>
                             </tr>
                         </tbody>
                     </table>
 
-                    <div>
-                        <span id="total-carrinho">Total: R$ 0,00</span>
-                        <button>Finalizar Compra</button>
+                    <div class="container-preco">
+                        <span class="total-carrinho" id="total-carrinho">Total: R$ 0,00</span>
+                        <button class="finalizar-compra">Finalizar Compra</button>
                     </div>
                 </div>
 
             </div>
         </div>
-    </div> -->
-
+    </div>
     <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
 </body>
 
