--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
                 </li>
                 </li>
-                <li class="produto" data-id="caneca-devemdobro">
+                <li class="produto" data-id="caneca-branca">
                     <figure>
                         <img src="./assets/images/caneca_devemdobro.jpg" alt="Caneca Dev em Dobro">
                         <figcaption>Caneca Dev em Dobro</figcaption>
@@ -104,7 +104,7 @@
                     </div>
                 </li>
                 </li>
-                <li class="produto" data-id="caneca-devemdobro">
+                <li class="produto" data-id="caneca-branca">
                     <figure>
                         <img src="./assets/images/caneca_devemdobro.jpg" alt="Caneca Dev em Dobro">
                         <figcaption>Caneca Dev em Dobro</figcaption>
@@ -216,6 +216,8 @@
         </div>
     </div>
     <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
+
+    <script src="./js/carrinho.js"></script>
 </body>
 
 </html>
