--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
     </footer>
 
-    <div id="modal-1" class="modal" aria-hidden="true">
+    <div id="modal-1"  aria-hidden="true">
 
         <div tabindex="-1" data-micromodal-close>
 
